src/objects/packinglabebatch__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DaysfromCurrentdate__c</fullName>
        <label>DaysfromCurrentdate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issuedate__c</fullName>
        <label>Issuedate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ToAddress__c</fullName>
        <label>ToAddress</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToEmailID__c</fullName>
        <label>ToEmailID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToName__c</fullName>
        <label>ToName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>packinglabelbatch</label>
</CustomObject>